# GameOfLife

./: .gitignore  CMakeLists.txt  GameOfLife  README.md  build.sh  cell.cpp  game.cpp  grid.cpp  imgui.ini  main.cpp
dependencies/: CMakeLists.txt
dependencies/imgui-sfml/: CMakeLists.txt
logs/: log_2022-11-16.txt  log_2022-11-17.txt  log_2022-11-19.txt  log_2022-11-20.txt
src/: CMakeLists.txt  cell.cpp  game.cpp  grid.cpp  main.cpp
